client/index.scss
body {
  font-family: 'Montserrat';
  margin: 0px;
}

h1, h2, h3, h4, h4 {
  font-family: 'Montserrat'
}

a, a:hover, a:visited, a:link {
  font-family: 'Montserrat';
  text-decoration: none;
}


/* CSS TRANSITIONS */ 
.fade-appear {
  opacity: 0.01;
}

.fade-appear.fade-appear-active {
  opacity: 1;
  transition: opacity 500ms ease-in;
}

.fade-leave {
  opacity: 1;
}

.fade-leave.fade-leave-active {
  opacity: 0.01;
  transition: opacity 300ms ease-in;
}

